


[package]
name = "strainer"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
counted-array = "0.1.2"

[dependencies]
termion = "1.5.6"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "mylib"
path = "src/lib.rs"